<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_albums"
        android:icon="@drawable/ic_baseline_album_24dp"
        android:title="@string/title_albums" />

    <item
        android:id="@+id/navigation_performers"
        android:icon="@drawable/ic_baseline_music_note_24dp"
        android:title="@string/title_performers" />

    <item
        android:id="@+id/navigation_collectors"
        android:icon="@drawable/ic_baseline_library_music_24dp"
        android:title="@string/title_collectors" />

</menu>